--- a/src/main/res/layout/ac_invite_vk_friends.xml
+++ b/src/main/res/layout/ac_invite_vk_friends.xml
@@ -7,7 +7,8 @@
         android:id="@+id/vkFriendsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@null" />
+        android:divider="@null"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/mainProgressBar"
@@ -15,5 +16,16 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/noOneFriendLoaded"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="@string/friends_empty_list_error"
+        android:textColor="#404040"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
