--- a/src/main/res/layout/ac_photoblog.xml
+++ b/src/main/res/layout/ac_photoblog.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     android:background="#FFFFFF">
 
-    <com.topface.topface.ui.GridViewWithHeaderAndFooter
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/user_photos_grid"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="@android:color/transparent"
@@ -14,11 +16,10 @@
         android:fadingEdge="none"
         android:gravity="center"
         android:horizontalSpacing="@dimen/add_to_leader_spacing_value"
-        android:listSelector="@android:color/transparent"
-        android:numColumns="@integer/add_to_leader_column_count"
         android:paddingBottom="2dp"
         android:paddingLeft="@dimen/add_to_leader_spacing_value"
         android:paddingRight="@dimen/add_to_leader_spacing_value"
+        android:scrollbars="vertical"
         android:verticalSpacing="@dimen/add_to_leader_spacing_value" />
 
     <com.topface.topface.ui.views.LockerView
