--- a/src/main/res/layout/item_auto_reply.xml
+++ b/src/main/res/layout/item_auto_reply.xml
@@ -21,7 +21,7 @@
             android:text="@string/settings_auto_greeting_title" />
 
         <CheckBox
-            android:id="@+id/auto_greeting_state"
+            android:id="@+id/auto_reply_state"
             style="@style/Switcher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
