--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -51,7 +51,7 @@
 
     <LinearLayout
         android:id="@+id/resources_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="16dp"
@@ -61,7 +61,12 @@
         <TextView
             android:id="@+id/coins_textview"
             style="@style/CoinsTextView"
-            android:paddingRight="11dp" />
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:paddingRight="5dp"
+            android:singleLine="true" />
 
         <TextView
             android:id="@+id/likes_textview"
@@ -69,6 +74,12 @@
             android:layout_height="wrap_content"
             android:drawablePadding="2dp"
             android:drawableRight="@drawable/ic_heart_nav_bar"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:paddingLeft="6dp"
+            android:singleLine="true"
             android:textSize="24sp" />
     </LinearLayout>
 </RelativeLayout>
