--- a/src/google/res/values-it/strings-profile.xml
+++ b/src/google/res/values-it/strings-profile.xml
@@ -221,7 +221,7 @@
     <string name="form_habits_restaurants_1">I ristoranti preferiti</string>
     <string name="form_habits_restaurants_2">I tuoi ristoranti preferiti</string>
     <string name="form_habits_restaurants_3">I tuoi ristoranti preferiti</string>
-    <string name="form_detail_about_dating_0">Di primo incontro con una ragazza</string>
+    <string name="form_detail_about_dating_0">Sul primo incontro con la ragazza</string>
     <string name="form_detail_about_dating_1">Di un primo appuntamento ideale</string>
     <string name="form_detail_about_dating_2">Come immagini il primo incontro con una ragazza?</string>
     <string name="form_detail_about_dating_3">Descrivi l’appuntamento ideale</string>
