--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1242,4 +1242,19 @@
         <item name="android:drawableLeft">@null</item>
         <item name="android:drawableRight">@null</item>
     </style>
+
+    <!-- Take photo screen -->
+    <style name="TakePhotoText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:lineSpacingExtra">@dimen/take_photo_extra_spacing</item>
+        <item name="android:textColor">@color/take_photo_screen_text_dark</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="TakePhotoText.Medium">
+        <item name="android:textColor">@color/take_photo_screen_text_medium</item>
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
