--- a/src/amazon/res/values-et/strings-profile.xml
+++ b/src/amazon/res/values-et/strings-profile.xml
@@ -50,9 +50,7 @@
     <string name="profile_form_alcohol_male_1">Jätsin maha</string>
     <string name="profile_form_alcohol_male_2">Vahel võib</string>
     <string name="profile_form_alcohol_male_3">Varsti jätan maha</string>
-    <string name="profile_form_alcohol_male_4">Jõin, joon ja joon ka tulevikus/ja jätkan
-        joomist/hakkan jooma
-    </string>
+    <string name="profile_form_alcohol_male_4">Jõin, joon ja joon ka tulevikus/ja jätkan joomist/hakkan jooma</string>
     <string name="profile_form_alcohol_female_0">Ma olen niigi lõbus</string>
     <string name="profile_form_alcohol_female_1">Jätsin maha</string>
     <string name="profile_form_alcohol_female_2">Vahel võib</string>
