--- a/src/amazon/res/values/strings-profile.xml
+++ b/src/amazon/res/values/strings-profile.xml
@@ -223,8 +223,7 @@
     <string name="form_habits_restaurants_3">Your favorite restaurants</string>
     <string name="form_detail_about_dating_0">About your first date with a girl</string>
     <string name="form_detail_about_dating_1">About your ideal first date</string>
-    <string name="form_detail_about_dating_2">What would your first date with a girl be like?
-    </string>
+    <string name="form_detail_about_dating_2">What would your first date with a girl be like?</string>
     <string name="form_detail_about_dating_3">Describe your perfect date</string>
     <string name="form_detail_archievements_0">Biggest achievements in life</string>
     <string name="form_detail_archievements_1">Biggest achievements in life</string>
