--- a/src/blueStacks/res/values-es/strings-profile.xml
+++ b/src/blueStacks/res/values-es/strings-profile.xml
@@ -220,8 +220,8 @@
   <string name="form_habits_restaurants_1">Restaurantes favoritos</string>
   <string name="form_habits_restaurants_2">Tus restaurantes favoritos</string>
   <string name="form_habits_restaurants_3">Tus restaurantes favoritos</string>
-  <string name="form_detail_about_dating_0">De la primera cita con una chica</string>
-  <string name="form_detail_about_dating_1">De la primera cita perfecta</string>
+  <string name="form_detail_about_dating_0">Sobre la primera cita con una chica</string>
+  <string name="form_detail_about_dating_1">Sobre la primera cita ideal</string>
   <string name="form_detail_about_dating_2">¿Cómo será tu primera cita con una chica?</string>
   <string name="form_detail_about_dating_3">Describe tu cita perfecta</string>
   <string name="form_detail_archievements_0">Los mejores logros en tu vida</string>
