--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -67,4 +67,5 @@
     <dimen name="take_photo_extra_spacing">2dp</dimen>
     <dimen name="take_photo_padding_24">24dp</dimen>
     <dimen name="take_photo_padding_40">40dp</dimen>
+    <dimen name="auth_buttons_padding">16dp</dimen>
 </resources>
