--- a/src/main/res/layout/item_left_menu_button_with_badge.xml
+++ b/src/main/res/layout/item_left_menu_button_with_badge.xml
@@ -5,8 +5,8 @@
 
     <com.topface.topface.ui.views.ImageViewRemote
         android:id="@+id/image_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/left_menu_icon_width"
+        android:layout_height="@dimen/left_menu_icon_height"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" />
 
@@ -22,5 +22,4 @@
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@id/tvCounterBadge"
         android:layout_toRightOf="@id/image_icon" />
-
 </RelativeLayout>
