--- a/src/main/res/layout/layout_left_menu_footer.xml
+++ b/src/main/res/layout/layout_left_menu_footer.xml
@@ -5,8 +5,8 @@
 
     <com.topface.topface.ui.views.ImageViewRemote
         android:id="@+id/image_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/left_menu_icon_width"
+        android:layout_height="@dimen/left_menu_icon_height"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:background="@drawable/ic_balance_selector" />
@@ -16,5 +16,4 @@
         style="@style/LeftMenuButtons"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/image_icon" />
-
 </RelativeLayout>
