--- a/src/main/res/layout/item_user_gallery_add_btn.xml
+++ b/src/main/res/layout/item_user_gallery_add_btn.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<layout>
 
-    <ImageView
-        android:id="@+id/ivPhoto"
-        style="@style/GalleryAddItem"/>
+    <data>
 
-</FrameLayout>
+        <variable
+            name="clickListener"
+            type="android.view.View.OnClickListener" />
+    </data>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:onClick="@{clickListener.onClick}">
+
+        <ImageView
+            android:id="@+id/ivPhoto"
+            style="@style/GalleryAddItem" />
+
+    </FrameLayout>
+
+</layout>
