--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -61,4 +61,7 @@
     <dimen name="buttons_elevation_value">1dp</dimen>
 
     <dimen name="express_message_button_min_width">214dp</dimen>
+
+    <dimen name="photo_grid_item_padding">2dp</dimen>
+
 </resources>
