--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -696,20 +696,20 @@
 
     <style name="GalleryItem">
         <item name="postProcessor">cropped</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="UsersPhotoToLeaders">
-        <item name="android:scaleType">fitCenter</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="GalleryAddItem">
         <item name="android:src">@drawable/profile_add_photo_selector</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="TopItem">
