--- a/src/main/res/layout/photo_blog_leaders_photo_item.xml
+++ b/src/main/res/layout/photo_blog_leaders_photo_item.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <data>
+
+        <variable
+            name="clickListener"
+            type="android.view.View.OnClickListener" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:onClick="@{clickListener.onClick}">
 
         <com.topface.topface.ui.views.ImageViewRemote
             android:id="@+id/ivLeadPhoto"
-            style="@style/UsersPhotoToLeaders"
-            android:layout_centerInParent="true" />
+            style="@style/UsersPhotoToLeaders"/>
 
-        <ImageView
-            android:id="@+id/checkedPhoto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:background="@drawable/bg_checked"
-            android:visibility="visible" />
-
-        <ImageView
-            android:id="@+id/lpiCheckMark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_checked" />
-    </RelativeLayout>
+    </FrameLayout>
 
 </layout>
 
