--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -72,4 +72,6 @@
 
     <dimen name="left_menu_icon_width">24dp</dimen>
     <dimen name="left_menu_icon_height">24dp</dimen>
+
+    <dimen name="other_services_button_img_padding">7dp</dimen>
 </resources>
