--- a/src/main/res/layout/item_feed_part_name.xml
+++ b/src/main/res/layout/item_feed_part_name.xml
@@ -7,8 +7,9 @@
     <TextView
         android:id="@+id/ifp_name"
         style="@style/ListName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <TextView
         android:id="@+id/ifp_age"
