--- a/src/main/res/layout/item_feed_layout_simple.xml
+++ b/src/main/res/layout/item_feed_layout_simple.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    style="@style/ListItemContainer"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ListItemContainer">
 
     <include
         android:id="@+id/ifp_avatar"
-        layout="@layout/item_feed_part_avatar"/>
+        layout="@layout/item_feed_part_avatar" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/ifp_avatar"
-        android:paddingBottom="1dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="1dp">
 
-        <include
-            layout="@layout/item_feed_part_name"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/ifp_name"
+                style="@style/ListName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/ifp_age"
+                style="@style/ListAge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
         <include
             android:id="@+id/ifp_text"
             layout="@layout/item_feed_part_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
