--- a/src/main/res/layout/item_feed_layout_time_count.xml
+++ b/src/main/res/layout/item_feed_layout_time_count.xml
@@ -1,35 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    style="@style/ListItemContainer"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/ListItemContainer">
 
     <include
         android:id="@+id/ifp_avatar"
-        layout="@layout/item_feed_part_avatar"/>
+        layout="@layout/item_feed_part_avatar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/ifp_avatar"
-        android:paddingBottom="1dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="1dp">
 
         <LinearLayout
             android:id="@+id/ifp_name_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-            <include
-                layout="@layout/item_feed_part_name"/>
+            <!--
+            если Лена скажет, что имена о5 обрезаются нужно ей сказать, что в диалогах останется все как есть
+            если задать вес возраста, то уедет дата, если придавить датой. Максимум, что можно сделать это
+            придавить именем, но тогда будет дырка между именем и возрастом
+            -->
 
-            <include
+            <TextView
+                android:id="@+id/ifp_name"
+                style="@style/ListName"
+                android:maxWidth="154dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/ifp_age"
+                style="@style/ListAge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <TextView
                 android:id="@+id/ifp_time"
-                layout="@layout/item_feed_part_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                style="@style/ListTime"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
 
         </LinearLayout>
 
@@ -38,9 +56,9 @@
             layout="@layout/item_feed_part_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignBaseline="@+id/ifp_text"
-            android:layout_below="@id/ifp_name_container"/>
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/ifp_name_container" />
 
         <include
             android:id="@+id/ifp_text"
@@ -49,6 +67,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/ifp_name_container"
-            android:layout_toLeftOf="@id/ifp_counter"/>
+            android:layout_toLeftOf="@id/ifp_counter" />
     </RelativeLayout>
 </RelativeLayout>
