--- a/src/main/res/layout/item_feed_part_name.xml
+++ b/src/main/res/layout/item_feed_part_name.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/ifp_name"
         style="@style/ListName"
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
