--- a/src/main/res/layout/item_feed_layout_simple.xml
+++ b/src/main/res/layout/item_feed_layout_simple.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/ListItemContainer">
 
     <include
@@ -25,7 +24,7 @@
                 style="@style/ListName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/ifp_age"
