--- a/src/main/res/layout/item_feed_layout_time_count.xml
+++ b/src/main/res/layout/item_feed_layout_time_count.xml
@@ -40,7 +40,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-
             <TextView
                 android:id="@+id/ifp_time"
                 style="@style/ListTime"
@@ -48,15 +47,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
-
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ifp_name_container"
-            android:orientation="horizontal"
-            android:baselineAligned="false">
+            android:baselineAligned="false"
+            android:orientation="horizontal">
 
             <include
                 android:id="@+id/ifp_text"
@@ -70,7 +68,6 @@
                 layout="@layout/item_feed_part_counter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
 
         </LinearLayout>
     </RelativeLayout>
